Exams: Updated styling and fixed z-index issue of datepicket popup

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -585,3 +585,15 @@ td.attendance-radio {
 span.select2-container {
   z-index:10050;
 }
+
+.no-scroll {
+  overflow: visible !important;
+}
+
+.no-fixed-height {
+  height: auto !important;
+}
+
+.select2-selection__rendered {
+  margin-top: -3px;
+}
